docs/v5.6.1/_sources/gallery/experiment/sphere/coupling_vs_sampling.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/experiment/sphere/coupling_vs_sampling.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_experiment_sphere_coupling_vs_sampling.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_experiment_sphere_coupling_vs_sampling.py:


Sphere: Coupling vs sampling
============================

.. GENERATED FROM PYTHON SOURCE LINES 6-54



.. image-sg:: /gallery/experiment/sphere/images/sphx_glr_coupling_vs_sampling_001.png
   :alt: coupling vs sampling
   :srcset: /gallery/experiment/sphere/images/sphx_glr_coupling_vs_sampling_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    BK7            sellmeier  specs/SCHOTT-optical/P-BK7
    aluminium      tabulated  main/Al/Rakic
    fused_silica   sellmeier  main/SiO2/Malitson
    gold           tabulated  main/Au/Olmon-ev
    silver         tabulated  main/Ag/Johnson
    water          sellmeier  main/H2O/Daimon-19.0C

    [<matplotlib.lines.Line2D object at 0x7fe30c3083d0>, <matplotlib.lines.Line2D object at 0x7fe30c309390>, <matplotlib.lines.Line2D object at 0x7fe30c30b490>, <matplotlib.lines.Line2D object at 0x7fe30c12d290>]





|

.. code-block:: Python

    import numpy
    from PyMieSim import (
        ureg,
        PhotodiodeSet,
        SphereSet,
        GaussianSet,
        PolarizationSet,
        Experiment,
        print_available,
        SellmeierMaterial,
        SellmeierMedium,
    )



    print_available()


    polarization_set = PolarizationSet(
        angles=[90.0] * ureg.degree,
    )

    source = GaussianSet(
        wavelength=[400] * ureg.nanometer,
        polarization=polarization_set,
        optical_power=[1e-3] * ureg.watt,
        numerical_aperture=[0.2],
    )

    scatterer = SphereSet(
        diameter=[5000] * ureg.nanometer,
        material=[SellmeierMaterial(material_name="BK7")],
        medium=[SellmeierMedium(material_name="water")],
    )

    detector = PhotodiodeSet(
        numerical_aperture=[0.2],
        phi_offset=numpy.linspace(-20, 20, 400) * ureg.degree,
        gamma_offset=[0] * ureg.degree,
        sampling=[20, 40, 80, 160],
        medium=[1.0],
    )

    experiment = Experiment(scatterer_set=scatterer, source_set=source, detector_set=detector)

    result = experiment.get("coupling")

    result.plot(x="detector:phi_offset")


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.283 seconds)


.. _sphx_glr_download_gallery_experiment_sphere_coupling_vs_sampling.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: coupling_vs_sampling.ipynb <coupling_vs_sampling.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: coupling_vs_sampling.py <coupling_vs_sampling.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: coupling_vs_sampling.zip <coupling_vs_sampling.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
